4.0.3
	+ Fixed regresion on save changes popup on deprovision
	+ Migrate SOGo database when upgrading from 3.5
4.0.2
	+ zentyal-sogo package removal management
4.0.1
	+ Cache DomainTable DNS model in VDomains to avoid querying it in
	  acquirers
	+ Fix problems with some translations on CA name with non-ASCII chars
	+ Disable HTTPS and SSL options for vdomain after certificate is revoked
	+ When removing user delete its sogo database rows
	+ Raise error on wizard when the user enter unsupported characters
	  for the CA
4.0
	+ Make sure no repeated preconditons are shown
	+ OpenChange users can have mail accounts on different virtual domains
	+ Add conf file for openchange module, containing broker config for
	  mapiproxy server
	+ Use separate apache log files for ocsmanager
	+ Recreate openchange certificate if it is not the correct one
	+ Allow to customize CA attributes on initial configuration wizard
	+ RPC proxy is available in web interface when you have only
	  internal interfaces
	+ Provision action triggers save changes action
	+ Fixed deprovision
	+ OpenChange account is enabled by default for all the new created users
	+ Adapt to changes in Out Of Office implementation in OCSManager
	+ Allow to access SOGo also with the /webmail URL
	+ Apache handles now all the OC web services directly without haproxy/nginx
	+ Remove dependency on deprecated webserver module
	+ OpenChange -> Setup menu entry moved to Mail -> OpenChange
	+ Remove currently unused migration code
	+ Set version to 4.0
	+ Tune OCSManager configuration for autodiscover
	+ Redirect all /ews/ requests to OCSManager
	+ Use .crt when downloading the certificate for RPC/Proxy
	  to ease Windows importing
	+ Changes to out-of-office required by upstream openchange changes
	+ Notify when OpenChange is using the domain certificate
	+ Migrate RPC Proxy certificate to new use our zentyal-ca
	+ Adapted configuration for making Autodiscover works with Outlook Anywhere