@@ -1,3 +1,5 @@
+HEAD
+	+ ActiveSync needs to have a HTTPS webmail enabled
 4.0.3
 	+ Fixed regresion on save changes popup on deprovision
 	+ Migrate SOGo database when upgrading from 3.5
